[project]
name = "pyetta"
version = "0.0.4dev0"
description = "Tooling for automated testing on embedded bare metal platforms."
authors = [
    {name = "Kenneth Ng", email = "ngkaijie@hotmail.com"}
]
maintainers= [
    {name = "Kenneth Ng", email = "ngkaijie@hotmail.com"}
]
requires-python = ">=3.7"
license = {text = "MIT License"}
readme = "readme.rst"
dependencies = [
	"pyserial",
	"click>=8.0",
	"pyocd>=0.34",
	"colorama",
	"prettytable",
	"junit-xml"
]
classifiers = [
	"Development Status :: 1 - Planning",
	"Environment :: Console",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Topic :: Software Development :: Embedded Systems",
	"Topic :: Software Development :: Testing",
	"Topic :: System :: Hardware",
	"Topic :: Utilities"
]

[project.optional-dependencies]
dev = [
	"sphinx",
	"sphinx-rtd-theme",
	"sphinxcontrib-mermaid",
	"tomli",
	"pytest",
]

[project.urls]
repository = "https://github.com/kenkaijie/pyetta"

[project.scripts]
pyetta = "pyetta.cli_entry:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
