[project]
name = "pyetta"
version = "0.0.4dev0"
description = "Tooling for automated testing on embedded bare metal platforms."
authors = [
    { name = "Kenneth Ng", email = "ngkaijie@hotmail.com" }
]
maintainers = [
    { name = "Kenneth Ng", email = "ngkaijie@hotmail.com" }
]
requires-python = ">=3.7"
license = { text = "MIT License" }
readme = "readme.md"
dependencies = [
    "pyserial",
    "click>=8.0",
    "pyocd>=0.34",
    "junit-xml"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
    "Topic :: Utilities"
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-mermaid",
    "myst-parser",
    "tomli",
    "pytest>=6.0",
    "coverage[toml]",
    "flake8",
    "flake8-pyproject",
    "tox>=3.18",
    "build"
]

[project.urls]
repository = "https://github.com/kenkaijie/pyetta"
documentation = "https://pyetta.readthedocs.io/"

[project.scripts]
pyetta = "pyetta.cli_entry:main"

[tool.setuptools]
packages = ["pyetta"]

[tool.flake8]
max-line-length = 99
exclude = ".git,__pycache__,docs/source/conf.py,old,build,dist,venv"
count = true
statistics = true

[tool.coverage.run]
parallel = true
branch = true
source = ["pyetta", "examples", "test"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
